src/objects/Partner_Level_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Program_Level__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Channel Program Level</label>
        <referenceTo>ChannelProgramLevel</referenceTo>
        <relationshipLabel>Partner Level Requirements</relationshipLabel>
        <relationshipName>Partner_Level_Requirements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Point_Requirement__c</fullName>
        <description>Minimum Point Requirement for this activity type</description>
        <inlineHelpText>Minimum point requirement for this activity type</inlineHelpText>
        <label>Minimum Point Requirement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Activity_Type__c</fullName>
        <label>Partner Activity Type</label>
        <referenceTo>Partner_Activity_Type__c</referenceTo>
        <relationshipLabel>Partner Level Requirements</relationshipLabel>
        <relationshipName>Partner_Level_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Partner Level Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Partner Level Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Level Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>